# aurumaide

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/aurumaide/: __init__.py  __main__.py
src/aurumaide/google/: chat.py  mcp.py
src/aurumaide/teamcity/: client.py  token.py
src/aurumaide/utility/: config.py  logger.py  output.py
tests/: script_create_token.py  script_download_build_log.py  script_list_build_types.py  script_list_builds.py  script_list_projects.py  script_start_build.py  script_test_mcp.py  test_config.py  test_google_chat.py  test_init.py  test_logger.py  test_main.py  test_mcp_server.py  test_output.py  test_teamcity.py  test_teamcity_token.py
