[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurumaide"
version = "0.2.0"
description = "Personal AI assistant — Aurum (gold) + Aide (helper)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Heui Jin" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "mcp>=1.0",
]

[project.scripts]
aurumaide = "aurumaide.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/aurumaide"]
